--- a/src/templates/actors/partials/character-inventory-tab.html
+++ b/src/templates/actors/partials/character-inventory-tab.html
@@ -9,7 +9,7 @@
         class="item-control item-create"
         data-type="weapon"
         title="{{localize 'OSE.Add'}}"
-      ><i class="fa fa-plus"></i
+        ><i class="fa fa-plus"></i
       ></a>
     </div>
   </div>
@@ -33,7 +33,7 @@
           {{/if}} {{/each}} {{#each item.system.manualTags as |tag|}} {{#unless
           (getTagIcon tag.value)}}
           <span title="{{tag.title}}"
-          >{{tag.value}}{{#unless @last}},{{/unless}}</span
+            >{{tag.value}}{{#unless @last}},{{/unless}}</span
           >
 
           {{/unless}} {{/each}}
@@ -41,7 +41,7 @@
         <div class="field-short">
           {{#if (eq @root.config.encumbrance
           "basic")}}_{{else if (eq @root.config.encumbrance
-          "itembased")}}{{item.system.itemslots}}{{else}}{{item.system.weight}}{{/if}}
+            "itembased")}}{{item.system.itemslots}}{{else}}{{item.system.weight}}{{/if}}
         </div>
         <div class="item-controls">
           {{#if @root.owner }} {{#if (eq @root.type "character")}}
@@ -53,10 +53,10 @@
           </a>
           {{/if}}
           <a class="item-control item-edit" title='{{localize "OSE.Edit"}}'
-          ><i class="fas fa-edit"></i
+            ><i class="fas fa-edit"></i
           ></a>
           <a class="item-control item-delete" title='{{localize "OSE.Delete"}}'
-          ><i class="fas fa-trash"></i
+            ><i class="fas fa-trash"></i
           ></a>
           {{/if}}
         </div>
@@ -82,7 +82,7 @@
         class="item-control item-create"
         data-type="armor"
         title="{{localize 'OSE.Add'}}"
-      ><i class="fa fa-plus"></i
+        ><i class="fa fa-plus"></i
       ></a>
     </div>
   </div>
@@ -114,10 +114,10 @@
           </a>
           {{/if}}
           <a class="item-control item-edit" title='{{localize "OSE.Edit"}}'
-          ><i class="fas fa-edit"></i
+            ><i class="fas fa-edit"></i
           ></a>
           <a class="item-control item-delete" title='{{localize "OSE.Delete"}}'
-          ><i class="fas fa-trash"></i
+            ><i class="fas fa-trash"></i
           ></a>
           {{/if}}
         </div>
@@ -140,7 +140,7 @@
         class="item-control item-create"
         data-type="container"
         title="{{localize 'OSE.Add'}}"
-      ><i class="fa fa-plus"></i
+        ><i class="fa fa-plus"></i
       ></a>
     </div>
   </div>
@@ -158,15 +158,15 @@
           {{#if (eq @root.config.encumbrance "basic")}}_{{else if (eq
           @root.config.encumbrance
           "detailed")}}_{{else if (eq
-          @root.config.encumbrance
-          "itembased")}}_{{else}}{{bag.system.totalWeight}}{{/if}}
+            @root.config.encumbrance
+            "itembased")}}_{{else}}{{bag.system.totalWeight}}{{/if}}
         </div>
         <div class="field-short container-item-weight">
           {{#if (eq @root.config.encumbrance "basic")}}_{{else if (eq
           @root.config.encumbrance
           "detailed")}}_{{else if (and (eq @root.config.encumbrance
-          "itembased") (eq bag.system.contents.length 0))}}{{bag.system.itemslots}}{{else if (and (eq @root.config.encumbrance
-          "itembased") (gt bag.system.contents.length 0))}}_{{else}}{{bag.system.weight}}{{/if}}
+            "itembased") (eq bag.system.contents.length 0))}}{{bag.system.itemslots}}{{else if (and (eq @root.config.encumbrance
+              "itembased") (gt bag.system.contents.length 0))}}_{{else}}{{bag.system.weight}}{{/if}}
         </div>
         <div class="item-controls">
           {{#if @root.owner}} {{#if (eq @root.type "character") }} {{#unless
@@ -180,10 +180,10 @@
           </a>
           {{/unless }} {{/if }}
           <a class="item-control item-edit" title='{{localize "OSE.Edit"}}'
-          ><i class="fas fa-edit"></i
+            ><i class="fas fa-edit"></i
           ></a>
           <a class="item-control item-delete" title='{{localize "OSE.Delete"}}'
-          ><i class="fas fa-trash"></i
+            ><i class="fas fa-trash"></i
           ></a>
           {{/if}}
         </div>
@@ -216,17 +216,17 @@
               {{#if (eq @root.config.encumbrance "basic")}}_{{else if (eq
               @root.config.encumbrance
               "detailed")}}_{{else if (eq @root.config.encumbrance
-              "itembased")}}{{item.system.itemslots}}{{else}}{{item.system.weight}}{{/if}}
+                "itembased")}}{{item.system.cumulativeItemslots}}{{else}}{{item.system.cumulativeWeight}}{{/if}}
             </div>
             <div class="item-controls">
               {{#if @root.owner}}
               <a class="item-control item-edit" title='{{localize "OSE.Edit"}}'
-              ><i class="fas fa-edit"></i
+                ><i class="fas fa-edit"></i
               ></a>
               <a
                 class="item-control item-delete"
                 title='{{localize "OSE.Delete"}}'
-              ><i class="fas fa-trash"></i
+                ><i class="fas fa-trash"></i
               ></a>
               {{/if}}
             </div>
@@ -264,7 +264,7 @@
         class="item-control item-create"
         data-type="item"
         title="{{localize 'OSE.Add'}}"
-      ><i class="fa fa-plus"></i
+        ><i class="fa fa-plus"></i
       ></a>
     </div>
   </div>
@@ -290,24 +290,24 @@
           {{#if (eq @root.config.encumbrance "basic")}}_{{else if (eq
           @root.config.encumbrance
           "detailed")}}_{{else if (eq @root.config.encumbrance
-          "itembased")}}{{item.system.itemslots}}{{else}}{{item.system.weight}}{{/if}}
+            "itembased")}}{{item.system.cumulativeItemslots}}{{else}}{{item.system.cumulativeWeight}}{{/if}}
         </div>
         <div class="item-controls">
           {{#if @root.owner}}
-          {{#if (eq @root.type "character") }}
-          <a
-            class="item-control item-toggle {{#unless
+            {{#if (eq @root.type "character") }}
+              <a
+                class="item-control item-toggle {{#unless
                 item.system.equipped}}item-unequipped{{/unless}}"
-            title='{{localize "OSE.items.Equip"}}'
-          >
-            <i class="fas fa-hand"></i>
-          </a>
-          {{/if }}
+                title='{{localize "OSE.items.Equip"}}'
+              >
+                <i class="fas fa-hand"></i>
+              </a>
+            {{/if }}
           <a class="item-control item-edit" title='{{localize "OSE.Edit"}}'
-          ><i class="fas fa-edit"></i
+            ><i class="fas fa-edit"></i
           ></a>
           <a class="item-control item-delete" title='{{localize "OSE.Delete"}}'
-          ><i class="fas fa-trash"></i
+            ><i class="fas fa-trash"></i
           ></a>
           {{/if}}
         </div>
@@ -336,7 +336,7 @@
     <div class="category-caret"><i class="fas fa-caret-down"></i></div>
     <div class="category-name">{{localize "OSE.items.Treasure"}}</div>
     <div class="field-long">
-      {{system.treasure}} <i class="fas fa-circle"></i>
+      {{treasure}} <i class="fas fa-circle"></i>
     </div>
     <div class="field-short"><i class="fas fa-hashtag"></i></div>
     <div class="field-short"><i class="fas fa-weight-hanging"></i></div>
@@ -346,7 +346,7 @@
         data-type="item"
         data-treasure="true"
         title="{{localize 'OSE.Add'}}"
-      ><i class="fa fa-plus"></i
+        ><i class="fa fa-plus"></i
       ></a>
     </div>
   </div>
@@ -360,7 +360,7 @@
         ></div>
         <h4 class="item-name" title="{{item.name}}">{{item.name~}}</h4>
         <div class="field-long">
-          {{mult item.system.quantity.value item.system.cost}}
+          {{item.system.cumulativeCost}}
         </div>
         <div class="field-short quantity">
           <input
@@ -375,24 +375,24 @@
         </div>
         <div class="field-short">
           {{#if (eq @root.config.encumbrance
-          "itembased")}}{{ceil (mult item.system.quantity.value item.system.itemslots)}}{{else}}{{item.system.weight}}{{/if}}{{mult item.system.quantity.value item.system.weight}}
+          "itembased")}}{{item.system.cumulativeItemslots}}{{else}}{{item.system.cumulativeWeight}}{{/if}}
         </div>
         <div class="item-controls">
           {{#if @root.owner}}
-          {{#if (eq @root.type "character") }}
-          <a
-            class="item-control item-toggle {{#unless
+            {{#if (eq @root.type "character") }}
+              <a
+                class="item-control item-toggle {{#unless
                 item.system.equipped}}item-unequipped{{/unless}}"
-            title='{{localize "OSE.items.Equip"}}'
-          >
-            <i class="fas fa-hand"></i>
-          </a>
-          {{/if }}
+                title='{{localize "OSE.items.Equip"}}'
+              >
+                <i class="fas fa-hand"></i>
+              </a>
+            {{/if }}
           <a class="item-control item-edit" title='{{localize "OSE.Edit"}}'
-          ><i class="fas fa-edit"></i
+            ><i class="fas fa-edit"></i
           ></a>
           <a class="item-control item-delete" title='{{localize "OSE.Delete"}}'
-          ><i class="fas fa-trash"></i
+            ><i class="fas fa-trash"></i
           ></a>
           {{/if}}
         </div>
