--- a/src/scss/apps.scss
+++ b/src/scss/apps.scss
@@ -427,7 +427,7 @@
       margin: 0;
       font-weight: bold;
     }
-    > * {
+    >* {
       -webkit-user-select: text;
       -moz-user-select: text;
       -ms-user-select: text;
@@ -530,6 +530,132 @@
         padding: 1px 3px;
         color: whitesmoke;
         border-radius: 3px;
+      }
+    }
+  }
+}
+
+
+.combat-set-groups {
+  container-name: combat-set-groups;
+  container-type: inline-size;
+
+  --grid: 1fr;
+
+  @container combat-set-groups (min-width: 80ch) {
+    ol {
+      --grid: repeat(2, 1fr);
+    }
+  }
+
+  @container combat-set-groups (min-width: 160ch) {
+    ol {
+      --grid: repeat(3, 1fr);
+    }
+  }
+
+  @container combat-set-groups (min-width: 240ch) {
+    ol {
+      --grid: repeat(4, 1fr);
+    }
+  }
+
+  .window-content {
+    overflow-y: scroll;
+    max-height: 700px;
+  }
+
+  ol {
+    list-style-type: none;
+    display: grid;
+    grid-template-columns: var(--grid);
+    gap: 0.75em 2em;
+    margin: 0;
+    padding: 0;
+  }
+
+  &__combatant {
+    display: grid;
+    grid-template-columns: 1fr fit-content;
+    align-items: center;
+    gap: 0.25em;
+    font-size: var(--font-size-16);
+
+    &__header {
+      display: flex;
+      gap: 0.5em;
+      align-items: center;
+    }
+
+    &__name {
+      overflow: hidden;
+      text-overflow: ellipsis;
+      white-space: nowrap;
+    }
+
+    img {
+      max-width: 32px;
+      height: auto;
+    }
+
+    &__group-options {
+      display: grid;
+      grid-template-columns: repeat(4, 1fr);
+      gap: 0.5em 1em;
+
+      label.checkbox {
+        align-items: baseline;
+        opacity: 0.5;
+        display: block;
+        padding: 0.25em;
+        border-radius: 4px;
+        text-align: center;
+        background-color: var(--combat-set-option-bg);
+        color: var(--combat-set-option-font-color, white);
+        font-weight: bold;
+        cursor: pointer;
+        line-height: 1.5em;
+
+
+        input {
+          display: none;
+        }
+
+        &:has(input:checked) {
+          opacity: 1;
+        }
+
+
+        &:has(input[value="green"]) {
+          --combat-set-option-bg: green;
+        }
+
+        &:has(input[value="red"]) {
+          --combat-set-option-bg: red;
+        }
+
+        &:has(input[value="yellow"]) {
+          --combat-set-option-bg: yellow;
+          --combat-set-option-font-color: black;
+        }
+
+        &:has(input[value="purple"]) {
+          --combat-set-option-bg: purple;
+        }
+
+        &:has(input[value="blue"]) {
+          --combat-set-option-bg: blue;
+        }
+
+        &:has(input[value="orange"]) {
+          --combat-set-option-bg: orange;
+          --combat-set-option-font-color: black;
+        }
+
+        &:has(input[value="white"]) {
+          --combat-set-option-bg: var(--ose-group-color-white);
+          --combat-set-option-font-color: black;
+        }
       }
     }
   }
