--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -12,3 +12,8 @@ $colorCrimson: #44191a;
 $borderGroove: 2px groove #eeede0;
 $sheetBackground: whitesmoke;
 $inputBackground: linear-gradient(transparent, rgba(0, 0, 0, 0.1));
+
+:root {
+  --ose-group-color-slow: #1d3e59;
+  --ose-group-color-white: #92bbc9;
+}
